--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
             <li><a href="#"><i class="iconfont icon-phone"></i></a></li>
             <li><a href="#"><i class="iconfont icon-serch"></i></a></li>
         </ol>
+        <div class="car_login">
+            <p>立即<a href="#">登录</a>，查看购物车商品</p>
+        </div>
+        <div class="appscan">
+            <img src="images/erweima.png" alt="">
+        </div>
+        <div class="header_seach">
+            <i class="iconfont icon-serch"></i>
+            <input type="text" placeholder="空调特惠">
+        </div>
     </div>
     <div class="announce">
         <p>【通知】1、美的商城为美的集团官方渠道，请勿相信任何刷单信息。2、新疆部分区域无法快递正常发货，恢复时间待定，给您带来不便，敬请见谅。</p>
@@ -33,6 +43,88 @@
     </div>
     <div class="banner main">
         <a href="#"><img src="images/lunbotu.webp" alt=""></a>
+        <div class="index_product_list">
+            <ul class="list_first">
+                <li>
+                    <i class="iconfont icon-phone"></i>
+                    <a href="#" class="list_name">空调</a>
+                    <a href="#" class="list_dec">壁挂式</a>
+                </li>
+                <li>
+                    <i class="iconfont icon-phone"></i>
+                    <a href="#" class="list_name">冰箱</a>
+                    <a href="#" class="list_dec">三门冰箱</a>
+                </li>
+                <li>
+                    <i class="iconfont icon-phone"></i>
+                    <a href="#" class="list_name">洗衣机</a>
+                    <a href="#" class="list_dec">滚筒洗衣机</a>
+                </li>
+                <li>
+                    <i class="iconfont icon-phone"></i>
+                    <a href="#" class="list_name">厨房小店</a>
+                    <a href="#" class="list_dec">电饭煲</a>
+                </li>
+                <li>
+                    <i class="iconfont icon-phone"></i>
+                    <a href="#" class="list_name">厨房大电</a>
+                    <a href="#" class="list_dec">烟灶套装</a>
+                </li>
+                <li>
+                    <i class="iconfont icon-phone"></i>
+                    <a href="#" class="list_name">生活家电</a>
+                    <a href="#" class="list_dec">电风扇</a>
+                </li>
+                <li>
+                    <i class="iconfont icon-phone"></i>
+                    <a href="#" class="list_name">热水器</a>
+                    <a href="#" class="list_dec">净水器</a>
+                </li>
+                <li>
+                    <i class="iconfont icon-phone"></i>
+                    <a href="#" class="list_name">配件及周边</a>
+                    <a href="#" class="list_dec">清洗服务</a>
+                </li>
+            </ul>
+            <div class="wm">
+                <div class="wm_left">
+                    <ul>
+                        <li><span><img src="images/xiaotu.webp" class="wm_left_img"></span><a href="#" class="wm_left_name">滚筒洗衣机</a></li>
+                        <li><span><img src="images/xiaotu.webp" class="wm_left_img"></span><a href="#" class="wm_left_name">滚筒洗衣机</a></li>
+                        <li><span><img src="images/xiaotu.webp" class="wm_left_img"></span><a href="#" class="wm_left_name">滚筒洗衣机</a></li>
+                        <li><span><img src="images/xiaotu.webp" class="wm_left_img"></span><a href="#" class="wm_left_name">滚筒洗衣机</a></li>
+                        <li><span><img src="images/xiaotu.webp" class="wm_left_img"></span><a href="#" class="wm_left_name">滚筒洗衣机</a></li>
+                        <li><span><img src="images/xiaotu.webp" class="wm_left_img"></span><a href="#" class="wm_left_name">滚筒洗衣机</a></li>
+                    </ul>
+                </div>
+                <div class="wm_center">
+                    <ul>
+                        <li><span><img src="images/zhongtu.webp" class="wm_center_img"></span><a href="#"><span class="wm_center_name">波轮洗衣机 6.5KG 8大程序 不锈钢内桶 MB65-1000H</span><span class="wm_center_price">￥1999</span></a></li>
+                        <li><span><img src="images/zhongtu.webp" class="wm_center_img"></span><a href="#"><span class="wm_center_name">波轮洗衣机 6.5KG 8大程序 不锈钢内桶 MB65-1000H</span><span class="wm_center_price">￥1999</span></a></li>
+                        <li><span><img src="images/zhongtu.webp" class="wm_center_img"></span><a href="#"><span class="wm_center_name">波轮洗衣机 6.5KG 8大程序 不锈钢内桶 MB65-1000H</span><span class="wm_center_price">￥1999</span></a></li>
+                        <li><span><img src="images/zhongtu.webp" class="wm_center_img"></span><a href="#"><span class="wm_center_name">波轮洗衣机 6.5KG 8大程序 不锈钢内桶 MB65-1000H</span><span class="wm_center_price">￥1999</span></a></li>
+                    </ul>
+                </div>
+                <div class="wm_right">
+                    <ul>
+                        <li>
+                            <a href="#">
+                                <img src="images/datu.webp" class="wm_right_img">
+                                <p class="wm_right_p1">格调生活</p>
+                                <p class="wm_right_p2">健康洗衣，品质优选</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="images/datu.webp" class="wm_right_img">
+                                <p class="wm_right_p1">格调生活</p>
+                                <p class="wm_right_p2">健康洗衣，品质优选</p>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="content main">
         <ul class="list">
