--- a/html/buycar.html
+++ b/html/buycar.html
@@ -61,6 +61,32 @@
                 <i class="iconfont icon-guanfang"></i>
                 <span>美的官网商城</span>
             </div>
+            <ul class="car_item">
+                <li>
+                    <input type="checkbox" class="car_choose">
+                </li>
+                <li>
+                    <img src="../images/buycar/car_list.jpg" alt="">
+                    <a href="#">滚筒洗衣机 9KG变频 除菌洗 大容量 智能操控 MG90V130WDX</a>
+                </li>
+                <li>
+                    <p>白色</p>
+                    <p>9KG</p>
+                </li>
+                <li>
+                    2299.00
+                </li>
+                <li>
+                    <i class="iconfont icon-dec"></i>
+                    <input type="text" value="1">
+                    <i class="iconfont icon-add"></i>
+                </li>
+                <li>2299.00</li>
+                <li>
+                    <p>移入收藏夹</p>
+                    <p>删除</p>
+                </li>
+            </ul>
         </div>
         <div class="car_bottom">
             <ul class="car_bottom_left">
