--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <li><a href="#">商家入驻</a></li>
         </ul>
         <ol class="header_right">
-            <li><a href="#"><i class="iconfont icon-my"></i><span>登录</span></a></li>
+            <li><a href="#"><i class="iconfont icon-my"></i><span class="toLogin">登录</span></a></li>
             <li><a href="#"><i class="iconfont icon-buycar"></i></a></li>
             <li><a href="#"><i class="iconfont icon-phone"></i></a></li>
             <li><a href="#"><i class="iconfont icon-serch"></i></a></li>
