--- a/html/login.html
+++ b/html/login.html
@@ -28,9 +28,11 @@
                 </ul>
                 <form action="">
                     <p>账号密码登录</p>
-                    <input type="text" name="" id="" placeholder="手机号">
-                    <input type="password" name="" id="" placeholder="密码">
-                    <input type="submit" value="登录">
+                    <input type="text" placeholder="手机号" class="check_phone">
+                    <span class="error"></span>
+                    <input type="password" placeholder="密码" class="check_pwd">
+                    <span class="error"></span>
+                    <input type="button" value="登录" class="btn_login">
                     <div class="login_phone">
                         <a href="#">短信登录验证</a>
                         <span>|</span>
@@ -39,15 +41,20 @@
                     </div>
                 </form>
             </div>
+
+
             <div class="sign_in">
                 <p>使用手机号注册</p>
-                <span><input type="text" placeholder="手机号" class="input_phone"><a href="#" class="btn_phone">获取验证码</a></span>
+                <span class="phone"><input type="text" placeholder="手机号" class="input_phone"><a href="#" class="btn_phone">获取验证码</a></span>
+                <p class="phone_tip error"></p>
                 <input type="text" placeholder="短信验证码">
-                <input type="password" placeholder="密码">
-                <input type="password" placeholder="确认密码">
-                <span>密码长度必须在8位以上，含大小写字母、数字、符号至少三种</span>
+                <input type="password" placeholder="密码" class="inp_pwd">
+                <span class="error"></span>
+                <input type="password" placeholder="确认密码" class="inp_pwd2">
+                <span class="error"></span>
+                <span>密码长度6-11位，必须为大小写字母、数字类型</span>
                 <span><input type="checkbox" class="checkbox"><i>同意<a href="#" class="sign_rule"><美的官方商城用户注册协议></a></i></span>
-                <input type="submit" value="注册">
+                <input type="button" value="注册" class="btn_sign">
                 <a href="#" class="haveusername">已有账号？请登录</a>
             </div>
         </div>
@@ -55,6 +62,7 @@
     <div class="footer">
         Copyright © 1968-2018 美的集团股份有限公司 粤ICP备09215446号
     </div>
+    <script src="../js/jquery.js"></script>
     <script src="../js/login.js"></script>
 </body>
 </html>
