--- a/html/buycar.html
+++ b/html/buycar.html
@@ -61,7 +61,8 @@
                 <i class="iconfont icon-guanfang"></i>
                 <span>美的官网商城</span>
             </div>
-            <ul class="car_item">
+            <div class="car_item_box"></div>
+            <!-- <ul class="car_item">
                 <li>
                     <input type="checkbox" class="car_choose">
                 </li>
@@ -86,7 +87,7 @@
                     <p>移入收藏夹</p>
                     <p>删除</p>
                 </li>
-            </ul>
+            </ul> -->
         </div>
         <div class="car_bottom">
             <ul class="car_bottom_left">
@@ -101,12 +102,14 @@
             <ol class="car_bottom_right">
                 <li>已选商品<i class="total_number">1</i>款</li>
                 <li>
-                    <p>合计:<i class="total_price">￥2299.00</i></p>
+                    <p>合计:<i class="total_price">￥</i></p>
                     <p>(不含运费)</p>
                 </li>
                 <li>去结算</li>
             </ol>
         </div>
     </div>
+    <script src="../js/jquery.js"></script>
+    <script src="../js/buycar.js"></script>
 </body>
 </html>
