--- a/html/detial.html
+++ b/html/detial.html
@@ -70,7 +70,7 @@
                 </div>
             </div>
             <div class="product_right">
-                <h1 class="product_name">滚筒洗衣机 9KG变频 除菌洗 大容量 智能操控 MG90V130WDX </h1>
+                <!-- <h1 class="product_name">滚筒洗衣机 9KG变频 除菌洗 大容量 智能操控 MG90V130WDX </h1>
                 <h5>触摸屏设计，操作简单；M-smart智能家居系统，WIFI控制；变频电机，节能静音；除菌洗；银灰色门圈，时尚大气；I-time智能时间控制</h5>
                 <div class="act">
                     <span><i class="iconfont icon-time"></i>距活动结束：05天09小时38分37秒</span>
@@ -115,27 +115,24 @@
                         <h3>规格</h3>
                         <span>9KG</span>
                     </div>
-                    <div class="sku_num">
-                        <h3>数量</h3>
-                        <div class="sku_num_total">
-                            <i class="iconfont icon-dec"></i>
-                            <input type="text" value="1">
-                            <i class="iconfont icon-add"></i>
-                            <span></span>
-                        </div>
-                    </div>
-                    <!-- <div class="sku_address">
-                        <h3>配送至</h3>
-                        
-                    </div> -->
-                    <div class="sku_supp">
-                        <h3>供货商</h3>
-                        <span class="supp">美的洗衣机官方旗舰店</span>
+                </div> -->
+                <div class="product_right_insert"></div>
+                <div class="sku_num">
+                    <h3>数量</h3>
+                    <div class="sku_num_total">
+                        <i class="iconfont icon-dec"></i>
+                        <input type="text" value="1">
+                        <i class="iconfont icon-add"></i>
+                        <span></span>
                     </div>
                 </div>
+                <div class="sku_supp">
+                    <h3>供货商</h3>
+                    <span class="supp">美的洗衣机官方旗舰店</span>
+                </div>
                 <div class="carbuy">
-                    <a href="#" class="car">加入购物车</a>
-                    <a href="#" class="buy">立即购买</a>
+                    <a class="car">加入购物车</a>
+                    <a href="buycar.html" class="buy">立即购买</a>
                 </div>
                 <ul class="service">
                     <li>
