--- a/html/buycar.html
+++ b/html/buycar.html
@@ -12,8 +12,8 @@
 <body>
     <div class="header">
         <ul class="header_left">
-            <li><a href="#"></a></li>
-            <li><a href="#">首页</a></li>
+            <li><a href="../index.html"></a></li>
+            <li><a href="../index.html">首页</a></li>
             <li><a href="#">商家入驻</a></li>
             <li><a href="#">新品频道</a></li>
             <li><a href="#">商家入驻</a></li>
@@ -21,7 +21,7 @@
         </ul>
         <ol class="header_right">
             <li><a href="#"><i class="iconfont icon-my"></i><span>登录</span></a></li>
-            <li><a href="#"><i class="iconfont icon-buycar"></i></a></li>
+            <li><a href="buycar.html"><i class="iconfont icon-buycar"></i></a></li>
             <li><a href="#"><i class="iconfont icon-phone"></i></a></li>
             <li><a href="#"><i class="iconfont icon-serch"></i></a></li>
         </ol>
@@ -38,7 +38,7 @@
         <div class="iconfont icon-buycar"></div>
         <p>您的购物车还是空的，去看看心仪的商品吧~</p>
         <div class="car_btn">
-            <a href="#">去购物</a>
+            <a href="../index.html">去购物</a>
             <a href="#">去收藏夹</a>
         </div>
     </div>
@@ -62,32 +62,6 @@
                 <span>美的官网商城</span>
             </div>
             <div class="car_item_box"></div>
-            <!-- <ul class="car_item">
-                <li>
-                    <input type="checkbox" class="car_choose">
-                </li>
-                <li>
-                    <img src="../images/buycar/car_list.jpg" alt="">
-                    <a href="#">滚筒洗衣机 9KG变频 除菌洗 大容量 智能操控 MG90V130WDX</a>
-                </li>
-                <li>
-                    <p>白色</p>
-                    <p>9KG</p>
-                </li>
-                <li>
-                    2299.00
-                </li>
-                <li>
-                    <i class="iconfont icon-dec"></i>
-                    <input type="text" value="1">
-                    <i class="iconfont icon-add"></i>
-                </li>
-                <li>2299.00</li>
-                <li>
-                    <p>移入收藏夹</p>
-                    <p>删除</p>
-                </li>
-            </ul> -->
         </div>
         <div class="car_bottom">
             <ul class="car_bottom_left">
