--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <li><a href="#">商家入驻</a></li>
         </ul>
         <ol class="header_right">
-            <li><a href="#"><i class="iconfont icon-my"></i><span class="toLogin"></span></a></li>
-            <li><a href="#"><i class="iconfont icon-buycar"></i></a></li>
+            <li><a href="html/login.html"><i class="iconfont icon-my"></i><span class="toLogin"></span></a></li>
+            <li><a href="html/buycar.html"><i class="iconfont icon-buycar"></i></a></li>
             <li><a href="#"><i class="iconfont icon-phone"></i></a></li>
             <li><a href="#"><i class="iconfont icon-serch"></i></a></li>
         </ol>
@@ -149,8 +149,8 @@
     </div>
     <div class="content main">
         <ul class="list">
-            <li><a href="#"><img src="images/5ac2d850a9989.webp" alt=""></a></li>
-            <li><a href="#"><img src="images/5b29fe27b6301.webp" alt=""></a></li>
+            <li><a href="html/detial.html?id=0"><img src="images/5ac2d850a9989.webp" alt=""></a></li>
+            <li><a href="html/detial.html?id=1"><img src="images/5b29fe27b6301.webp" alt=""></a></li>
             <li><a href="#"><img src="images/5b29fe882fb3c.webp" alt=""></a></li>
             <li><a href="#"><img src="images/bifuli.jpg" alt=""></a></li>
         </ul>
