--- a/html/detial.html
+++ b/html/detial.html
@@ -12,15 +12,15 @@
 <body>
         <div class="header">
             <ul class="header_left">
-                <li><a href="#"></a></li>
-                <li><a href="#">首页</a></li>
+                <li><a href="../index.html"></a></li>
+                <li><a href="../index.html">首页</a></li>
                 <li><a href="#">商家入驻</a></li>
                 <li><a href="#">新品频道</a></li>
                 <li><a href="#">商家入驻</a></li>
             </ul>
             <ol class="header_right">
-                <li><a href="#"><i class="iconfont icon-my"></i><span>登录</span></a></li>
-                <li><a href="#"><i class="iconfont icon-buycar"></i></a></li>
+                <li><a href="login.html"><i class="iconfont icon-my"></i><span>登录</span></a></li>
+                <li><a href="buycar.html"><i class="iconfont icon-buycar"></i></a></li>
                 <li><a href="#"><i class="iconfont icon-phone"></i></a></li>
                 <li><a href="#"><i class="iconfont icon-serch"></i></a></li>
             </ol>
@@ -41,7 +41,7 @@
 
     <div class="main">
         <div class="nav">
-            <a href="#">首页</a> >
+            <a href="../index.html">首页</a> >
             <a href="#">洗衣机</a> >
             <a class="nav_name">MG90V130WDX</a>
         </div>
