--- a/html/login.html
+++ b/html/login.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="header">
-        <div class="logo"><a href="#"></a></div>
+        <div class="logo"><a href="../index.html"></a></div>
         <!-- <a href="#"><div class="logo"></div></a> -->
     </div>
     <div class="main content">
