--- a/html/buycar.html
+++ b/html/buycar.html
@@ -25,6 +25,16 @@
             <li><a href="#"><i class="iconfont icon-phone"></i></a></li>
             <li><a href="#"><i class="iconfont icon-serch"></i></a></li>
         </ol>
+        <div class="car_login">
+            <p>立即<a href="#">登录</a>，查看购物车商品</p>
+        </div>
+        <div class="appscan">
+            <img src="images/erweima.png" alt="">
+        </div>
+        <div class="header_seach">
+            <i class="iconfont icon-serch"></i>
+            <input type="text" placeholder="空调特惠">
+        </div>
     </div>
     <div class="announce">
         <p>【通知】1、美的商城为美的集团官方渠道，请勿相信任何刷单信息。2、新疆部分区域无法快递正常发货，恢复时间待定，给您带来不便，敬请见谅。</p>
