--- a/html/detial.html
+++ b/html/detial.html
@@ -49,14 +49,14 @@
             <div class="product_left">
                 <div class="showImg">
                     <!-- <img src="../images/detial/xiyiji2.webp"> -->
-                    <img src="../images/detial/xiyiji1.webp">
+                    <img src="" class="expandimg">
                     <div class="showcase"></div>
                 </div>
                 <div class="showBigImg">
-                    <img src="../images/detial/xiyiji1.webp" alt="">
+                    <img src="" alt="" class="showBigImgexpand">
                 </div>
                 <ul class="product_list">
-                    <li class="product_list_checked"><img src="../images/detial/xiyiji1small.webp"></li>
+                    <li class="product_list_checked"><img src="" class="showImgsmall"></li>
                     <li><img src="../images/detial/xiyiji2small.webp" alt=""></li>
                 </ul>
                 <div class="share">
