--- a/html/buycar.html
+++ b/html/buycar.html
@@ -12,15 +12,14 @@
 <body>
     <div class="header">
         <ul class="header_left">
-            <li><a href="../index.html"></a></li>
-            <li><a href="../index.html">首页</a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#">首页</a></li>
             <li><a href="#">商家入驻</a></li>
             <li><a href="#">新品频道</a></li>
             <li><a href="#">商家入驻</a></li>
-            <li><a href="#">美的员工福利通道</a></li>
         </ul>
         <ol class="header_right">
-            <li><a href="#"><i class="iconfont icon-my"></i><span>登录</span></a></li>
+            <li><a href="login.html"><i class="iconfont icon-my"></i><span class="toLogin"></span></a></li>
             <li><a href="buycar.html"><i class="iconfont icon-buycar"></i></a></li>
             <li><a href="#"><i class="iconfont icon-phone"></i></a></li>
             <li><a href="#"><i class="iconfont icon-serch"></i></a></li>
@@ -29,7 +28,7 @@
             <p>立即<a href="#">登录</a>，查看购物车商品</p>
         </div>
         <div class="appscan">
-            <img src="images/erweima.png" alt="">
+            <img src="../images/erweima.png" alt="">
         </div>
         <div class="header_seach">
             <i class="iconfont icon-serch"></i>
