--- a/html/detial.html
+++ b/html/detial.html
@@ -10,31 +10,31 @@
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_735572_w1te23d98qi.css">
 </head>
 <body>
-        <div class="header">
-            <ul class="header_left">
-                <li><a href="../index.html"></a></li>
-                <li><a href="../index.html">首页</a></li>
-                <li><a href="#">商家入驻</a></li>
-                <li><a href="#">新品频道</a></li>
-                <li><a href="#">商家入驻</a></li>
-            </ul>
-            <ol class="header_right">
-                <li><a href="login.html"><i class="iconfont icon-my"></i><span>登录</span></a></li>
-                <li><a href="buycar.html"><i class="iconfont icon-buycar"></i></a></li>
-                <li><a href="#"><i class="iconfont icon-phone"></i></a></li>
-                <li><a href="#"><i class="iconfont icon-serch"></i></a></li>
-            </ol>
-            <div class="car_login">
-                <p>立即<a href="#">登录</a>，查看购物车商品</p>
-            </div>
-            <div class="appscan">
-                <img src="../images/erweima.png" alt="">
-            </div>
-            <div class="header_seach">
-                <i class="iconfont icon-serch"></i>
-                <input type="text" placeholder="空调特惠">
-            </div>
+    <div class="header">
+        <ul class="header_left">
+            <li><a href="#"></a></li>
+            <li><a href="#">首页</a></li>
+            <li><a href="#">商家入驻</a></li>
+            <li><a href="#">新品频道</a></li>
+            <li><a href="#">商家入驻</a></li>
+        </ul>
+        <ol class="header_right">
+            <li><a href="login.html"><i class="iconfont icon-my"></i><span class="toLogin"></span></a></li>
+            <li><a href="buycar.html"><i class="iconfont icon-buycar"></i></a></li>
+            <li><a href="#"><i class="iconfont icon-phone"></i></a></li>
+            <li><a href="#"><i class="iconfont icon-serch"></i></a></li>
+        </ol>
+        <div class="car_login">
+            <p>立即<a href="#">登录</a>，查看购物车商品</p>
         </div>
+        <div class="appscan">
+            <img src="../images/erweima.png" alt="">
+        </div>
+        <div class="header_seach">
+            <i class="iconfont icon-serch"></i>
+            <input type="text" placeholder="空调特惠">
+        </div>
+    </div>
     <div class="announce">
         <p>【通知】1、美的商城为美的集团官方渠道，请勿相信任何刷单信息。2、新疆部分区域无法快递正常发货，恢复时间待定，给您带来不便，敬请见谅。</p>
     </div>
