--- a/html/buycar.html
+++ b/html/buycar.html
@@ -12,8 +12,8 @@
 <body>
     <div class="header">
         <ul class="header_left">
-            <li><a href="#"></a></li>
-            <li><a href="#">首页</a></li>
+            <li><a href="../index.html"></a></li>
+            <li><a href="../index.html">首页</a></li>
             <li><a href="#">商家入驻</a></li>
             <li><a href="#">新品频道</a></li>
             <li><a href="#">商家入驻</a></li>
